In users list input icon overlap fixed

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -418,7 +418,7 @@ $table-border-width: 0;
 
   &__icon {
     position: absolute;
-    z-index: 100;
+    z-index: 1;
     margin-left: 0.5rem;
     color: $lilac_blue;
     line-height: 0.9375rem;
